# sentinel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  example-appliance.toml  flake.nix  release.toml  result  result-man  result-vm
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .gitignore  book.toml  commit-model.md  os.md
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: design-notes-commit.md  design-notes-os.md
docs/src/architecture/: ab-updates.md  commit-model.md  overview.md  secure-boot.md  verified-boot.md
docs/src/building/: cli.md  images.md  iso.md  prerequisites.md  reproducibility.md
docs/src/handbook/: cli.md  examples.md  firewall.md  interfaces.md  multiwan.md  routing.md  services.md  system.md  vpn.md
docs/src/operations/: configure.md  install.md  update.md
docs/src/reference/: flake-outputs.md  tests.md
nix/: appliance.nix  image.nix  iso.nix  velstra-build-shim.rs  velstra-service.nix  wren-service.nix
src/: api.rs  archive.rs  compile.rs  config.rs  confirm.rs  diff.rs  install.rs  ipsec.rs  main.rs  net.rs  openconnect.rs  pki.rs  proxy.rs  repl.rs  session.rs  system.rs  ui.rs  update.rs  wgkey.rs  wren.rs
