[package]
name = "sentinel"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Velstra Sentinel — a standalone firewall/router appliance built on the Velstra eBPF/XDP data plane."
repository = "https://github.com/Velstra/sentinel"
homepage = "https://github.com/Velstra/sentinel"
publish = false # an appliance, not a library — not published to crates.io

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
# The Velstra control-plane wire protocol, from crates.io. This is how Sentinel
# talks to a Velstra controller / agent. The data-plane crates (velstra-common,
# -config) join here once they leave the git-aya dependency behind.
velstra-proto = "0.1"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rustyline = "14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.12", default-features = false, features = ["transport"] }
# The REST management API (roadmap C12): axum over the repo's existing tokio +
# hyper (tonic already pulls hyper 1.x). Every endpoint drives the SAME
# `Appliance` config model the CLI edits — one config tree, no UI-vs-CLI drift.
axum = "0.7"
libc = "0.2"
# WireGuard key handling (C1): derive a public key from a private key, generate
# fresh keypairs, and base64-encode/decode the 32-byte Curve25519 keys.
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
getrandom = "0.2"

[dev-dependencies]
# `tower::ServiceExt::oneshot` drives the axum router in-process for the API
# handler tests (auth, GET/PUT /config) without binding a live socket.
tower = { version = "0.5", features = ["util"] }

# Room to grow: split into sentinel-daemon / -cli / -web as the appliance fills
# out. For now a single binary keeps the skeleton honest.
[workspace]
